fixed the hero banner logo bug, made the tags in portofolio more consistent, made the circle perfectly aligned in the timeline

--- a/my-app/src/app/globals.css
+++ b/my-app/src/app/globals.css
@@ -155,3 +155,19 @@ html {
     animation-duration: 20s;
   }
 }
+
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.animate-fadeIn {
+  animation: fadeIn 0.7s ease-in-out forwards;
+}
+
